Comment Entity 생성