@@ -16,6 +16,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @Service
@@ -36,6 +38,7 @@ public class PostService {
                 .member(member)
                 .content(request.content())
                 .title(request.title())
+                .categoryType(request.categoryType())
                 .build();
 
         List<PostTag> postTags = createPostTagList(request.tagList());
@@ -49,9 +52,10 @@ public class PostService {
 
         List<String> findTagContents = findTags.stream()
                 .map(Tag::getTagContent)
-                .collect(Collectors.toList());
+                .toList();
 
         tagList.removeAll(findTagContents);
+
         List<Tag> newTags = tagList.stream()
                 .map(tagContent -> Tag.builder()
                         .tagContent(tagContent)
@@ -62,19 +66,43 @@ public class PostService {
         findTags.addAll(newTags);
 
         return findTags.stream()
-                        .map(tag -> PostTag.builder()
-                                .tag(tag)
-                                .build()
-                        )
-                                .collect(Collectors.toList());
+                .map(tag -> PostTag.builder()
+                        .tag(tag)
+                        .build())
+                .collect(Collectors.toList());
     }
 
     public Long updatePost(UpdatePostServiceRequest request)
     {
-        Post post = postRepository.findById(request.postId())
+        Post post = postRepository.findPostWithFetch(request.postId())
                 .orElseThrow(() -> new ApiException(ErrorCode.POST_NOT_FOUND));
-        post.update(request.title(), request.content());
+
+        List<Tag> newTags = createNewTags(post, request.tagList());
+        tagRepository.saveAll(newTags);
+
+        updatePostTag(post, newTags, request.tagList());
+
+        post.update(request.title(), request.content(), request.categoryType());
+
         return post.getPostId();
+    }
+
+    private List<Tag> createNewTags(Post post, List<String> requestTags)
+    {
+        Set<String> postTagContents = post.getPostTags().stream()
+                .map(postTag -> postTag.getTag().getTagContent())
+                .collect(Collectors.toSet());
+
+        return requestTags.stream()
+                .filter(Predicate.not(postTagContents::contains))
+                .map(requestTag -> Tag.builder().tagContent(requestTag).build())
+                .collect(Collectors.toList());
+    }
+
+    private void updatePostTag(Post post, List<Tag> newTags, List<String> requestTags)
+    {
+        post.getPostTags().removeIf(postTag -> !requestTags.contains(postTag.getTag().getTagContent()));
+        newTags.forEach(tag -> post.addPostTag(PostTag.builder().tag(tag).build()));
     }
 
     public void deletePost(Long postId)
